examples/simple/simple-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: simple-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: "Equivalent"
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
  validations:
  - expression: object.spec.replicas <= 5
    messageExpression: "'replicas must be equal or less than 5, but got ' + string(object.spec.replicas)"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: error-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: "Equivalent"
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
  validations:
  - expression: object.spec.rrrrreplicas <= 5
